fixing overflow

--- a/style.css
+++ b/style.css
@@ -269,8 +269,10 @@ footer i {
     }
 
     .socialMedia {
+        margin-left: 30px;
         display: block;
         padding: 20px;
+        /* background-color: red; */
     }
 
     .hide {
@@ -283,11 +285,13 @@ footer i {
     .contact {
         padding: 20px;
         overflow: hidden;
+
     }
 
     footer img {
         margin: 0;
         padding: 0;
+        
     }
 
     footer i {
